# internal/adapters/server/rest/h_dic.go
@@ -7,13 +7,13 @@ import (
 	dopHttps "github.com/rendau/dop/adapters/server/https"
 )
 
-// @Router       /dic [get]
-// @Tags         dic
-// @Summary      dictionaries
-// @Description  Get all dictionaries
-// @Produce      json
-// @Success      200  {object}  entities.DicDataSt
-// @Failure      400  {object}  dopTypes.ErrRep
+// @Router      /dic [get]
+// @Tags        dic
+// @Summary     dictionaries
+// @Description Get all dictionaries
+// @Produce     json
+// @Success     200 {object} entities.DicDataSt
+// @Failure     400 {object} dopTypes.ErrRep
 func (o *St) hDicGet(c *gin.Context) {
 	result, err := o.ucs.DicGet(o.getRequestContext(c))
 	if dopHttps.Error(c, err) {
